# remined

./: .cvsignore  .gitignore  AUTHORS  CHANGES  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  README  SDLMain.m  autogen.sh  configure  configure.in  remined.c  remined.h
English.lproj/: InfoPlist.strings
remined.xcode/: nelson.mode1  nelson.pbxuser  project.pbxproj
remined.xcodeproj/: project.pbxproj
