AM_CFLAGS = -DREMINED_RESOURCES=\"@prefix@/share/remined\"

bin_PROGRAMS = remined
remined_SOURCES = remined.c

nobase_dist_pkgdata_DATA = images/blank.bmp \
			images/bottom.bmp \
			images/bottomleft.bmp \
			images/bottomright.bmp \
			images/digit0.bmp \
			images/digit1.bmp \
			images/digit2.bmp \
			images/digit3.bmp \
			images/digit4.bmp \
			images/digit5.bmp \
			images/digit6.bmp \
			images/digit7.bmp \
			images/digit8.bmp \
			images/digit9.bmp \
			images/digit-.bmp \
			images/flag.bmp \
			images/left.bmp \
			images/mine.bmp \
			images/minedeath.bmp \
			images/misflagged.bmp \
			images/open0.bmp \
			images/open1.bmp \
			images/open2.bmp \
			images/open3.bmp \
			images/open4.bmp \
			images/open5.bmp \
			images/open6.bmp \
			images/open7.bmp \
			images/open8.bmp \
			images/question.bmp \
			images/right.bmp \
			images/smile.bmp \
			images/smilelose.bmp \
			images/smileoh.bmp \
			images/smilepressed.bmp \
			images/smilewin.bmp \
			images/top.bmp \
			images/topleft.bmp \
			images/topright.bmp
